--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <p>Berikut Ini Adalah Project Portofolio Yang Saya Buat</p>
           </div>
           <div class="project-img">
-            <img src="./img/projects.png" alt="img">
+            <img src="./img/projects.png" alt="img"> 
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/about.jpeg" alt="img">
+          <img src="./img/hiro.jpg" alt="img">
         </div>
       </div>
       <div class="col-right">
@@ -145,7 +145,7 @@
   </section>
   <!-- End Footer -->
   
-  <script src="./app.js"></script>
-</body>
+  <script src="./app.js"></script> 
+</body> 
 
 </html>
